--- a/src/components/Tenth.css
+++ b/src/components/Tenth.css
@@ -1,6 +1,7 @@
 table{
     border: 1px solid #F95700;
     border-collapse: collapse;
+    
 }
 th{
     border: 1px solid #F95700;
@@ -9,14 +10,30 @@ th{
 }
 tr{
     border: 1px solid #F95700;
+    margin: 40px 20px;
 }
 td{
-    text-align: left;
-    
+    padding: 10px 10px;
 }
-
 
 .cut-text {
     text-decoration: line-through;
   }
+  
+  /* CSS */
+table tr td:first-child {
+    padding-left: 25px; /* Adjust the padding value as needed */
+  }
+  td:nth-child(3){
+    background-color: #FEFAE7;
+    border-right: 1px solid #F95700;
+  }
+
+  .heading-color{
+    background-color: #FEFAE7;
+    padding: 15px;
+    transform:scaleY(1.3);
+    border-radius: 5px;
+  }
+  
   
