--- a/src/components/Tenth.css
+++ b/src/components/Tenth.css
@@ -1,39 +1,42 @@
-table{
-    border: 1px solid #F95700;
-    border-collapse: collapse;
-    
+table {
+  border: 1px solid #F95700;
+  border-collapse: collapse;
+
 }
-th{
-    border: 1px solid #F95700;
-    background-color: #F95700;
-    color: white;
+
+th {
+  border: 1px solid #F95700;
+  background-color: #F95700;
+  color: white;
 }
-tr{
-    border: 1px solid #F95700;
-    margin: 40px 20px;
+
+tr {
+  border: 1px solid #F95700;
+  margin: 40px 20px;
 }
-td{
-    padding: 10px 10px;
+
+td {
+  padding: 10px 10px;
 }
 
 .cut-text {
-    text-decoration: line-through;
-  }
-  
-  /* CSS */
-table tr td:first-child {
-    padding-left: 25px; /* Adjust the padding value as needed */
-  }
-  td:nth-child(3){
-    background-color: #FEFAE7;
-    border-right: 1px solid #F95700;
-  }
+  text-decoration: line-through;
+}
 
-  .heading-color{
-    background-color: #FEFAE7;
-    padding: 15px;
-    transform:scaleY(1.3);
-    border-radius: 5px;
-  }
-  
-  
+
+table tr td:first-child {
+  padding-left: 25px;
+  /* Adjust the padding value as needed */
+}
+
+td:nth-child(3) {
+  background-color: #FEFAE7;
+  border-right: 1px solid #F95700;
+}
+
+.heading-color {
+  background-color: #FEFAE7;
+  padding: 15px;
+  transform: scaleY(1.3);
+  border-radius: 5px;
+}
