some changes done

--- a/src/components/First.css
+++ b/src/components/First.css
@@ -2,6 +2,15 @@
     word-spacing: 0.25rem; 
   }
   
-  
+  .k{
+   
+    position: absolute;
+    left: 15.5rem;
+  top: 16.5rem;
+  z-index: -1;
+  }
+  .d{
+    z-index: -1;
+  }
 
  
