--- a/src/components/Third.css
+++ b/src/components/Third.css
@@ -2,7 +2,7 @@
     word-spacing: 0.25rem; 
   }
 
-  .container1::before {
+  /* .container1::before {
     content: " ";
     position: absolute;
     width: 90px;
@@ -118,4 +118,4 @@
   top: 9px;
   background-position: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
+} */
