--- a/src/components/Tenth.css
+++ b/src/components/Tenth.css
@@ -1,9 +1,14 @@
 table {
   border: 1px solid #F95700;
+
   border-collapse: collapse;
 
 }
 
+.table-rounded {
+  border-radius: 20px; /* Adjust the value to change the roundness */
+  overflow: hidden; /* Ensure the border-radius clips the table corners */
+}
 th {
   border: 1px solid #F95700;
   background-color: #F95700;
