--- a/src/components/Second.css
+++ b/src/components/Second.css
@@ -8,7 +8,7 @@
     height: auto;
     background-color: #FEFAE7;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    margin: 30px auto; /* Center horizontally and add margin at the top and bottom */
+    margin: 30px auto; 
 }
 
 
